# kdevplatform

./: KDevPlatformConfig.cmake.in
documentation/: CMakeLists.txt  config-documentation.h.cmake  standarddocumentationview.cpp  standarddocumentationview.h
interfaces/: iproject.h
plugins/git/: gitplugin.cpp
shell/: project.cpp  project.h
tests/: testproject.h
